Fix table class name

--- a/jpf_sudoku.html
+++ b/jpf_sudoku.html
@@ -43,7 +43,7 @@
       <p>Good luck!</p>      
    </article>
    <section>
-   <table class="sudoku">
+   <table class="spuzzle">
 		<caption> Sudoku </caption>
 		<colgroup>
 			<col id="firstCol" />
