--- a/jpf_sudoku.html
+++ b/jpf_sudoku.html
@@ -17,6 +17,7 @@
    <title>The Sudoku Puzzle</title>
    <link href="jpf_reset.css" rel="stylesheet" />
    <link href="jpf_styles.css" rel="stylesheet" />
+   <link href="jpf_sudoku.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -34,14 +35,6 @@
       </nav>
    </header>
    
-
-   <article>
-      <h1>To Play</h1>
-      <p>
-	  <!--  This will contain the instructions to play at a later date. -->
-      </p>
-      <p>Good luck!</p>      
-   </article>
    <section>
    <table class="spuzzle">
 		<caption> Sudoku </caption>
@@ -84,8 +77,7 @@
 					<td></td>
 				</tr>
 			</table>
-		</td>
-		
+		</td>	
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
@@ -104,8 +96,7 @@
 					<td></td>
 				</tr>
 			</table>
-		</td>
-		
+		</td>	
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
@@ -124,15 +115,12 @@
 					<td></td>
 				</tr>
 			</table>
-		</td>
-		
+		</td>	
    </tr>
-   <tr>
-		<th>B</th>
-   </tr>
-   <tr>
-		<th>C</th>
-   </tr>
+   
+   <tr><th>B</th></tr>
+   <tr><th>C</th></tr>
+   
    <tr>
 		<th>D</th>
 		<td colspan="3" rowspan="3" class="goldBox">
@@ -154,7 +142,6 @@
 				</tr>
 			</table>
 		</td>
-		
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
@@ -174,7 +161,6 @@
 				</tr>
 			</table>
 		</td>
-		
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
@@ -194,14 +180,11 @@
 				</tr>
 			</table>
 		</td>
-		
    </tr>
-   <tr>
-		<th>E</th>
-   </tr>
-   <tr>
-		<th>F</th>
-   </tr>
+   
+   <tr><th>E</th></tr>
+   <tr><th>F</th></tr>
+   
    <tr>
 		<th>G</th>
 		<td colspan="3" rowspan="3" class="greenBox">
@@ -223,7 +206,6 @@
 				</tr>
 			</table>
 		</td>
-		
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
@@ -243,7 +225,6 @@
 				</tr>
 			</table>
 		</td>
-		
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
@@ -262,18 +243,23 @@
 					<td></td>
 				</tr>
 			</table>
-		</td>
-		
+		</td>	
    </tr>
-   <tr>
-		<th>H</th>
-   </tr>
-   <tr>
-		<th>I</th>
-   </tr>
+   
+   <tr><th>H</th></tr>
+   <tr><th>I</th></tr>
    </tbody>
    </table>
    </section>
+   <article>
+      <h1>To Play</h1>
+      <p>
+	  Sudoku...
+	  <!--  This will contain the instructions to play at a later date. -->
+      </p>
+      <p>Good luck!</p>      
+   </article>
+ 
    
    <footer>
       <nav>
