--- a/jpf_sudoku.html
+++ b/jpf_sudoku.html
@@ -36,6 +36,7 @@
    </header>
    
    <section>
+   <form action="" method="post">
    <table class="spuzzle">
 		<caption> Sudoku </caption>
 		<colgroup>
@@ -62,62 +63,61 @@
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td></td>
-					<td>4</td>
+					<td id='00'><input maxlength="1" id="#"></input></td>
+					<td id='01'><input maxlength="1" id="#"></input></td>
+					<td id='02'>4</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='03'><input maxlength="1"></input></td>
+					<td id='04'><input maxlength="1"></input></td>
+					<td id='05'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>3</td>
-					<td>5</td>
-					<td></td>
+					<td id='06'>3</td>
+					<td id='07'>5</td>
+					<td id='08'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>	
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
-					<td>5</td>
-					<td></td>
-					<td>3</td>
+					<td id='09'>5</td>
+					<td id='10'><input maxlength="1"></input></td>
+					<td id='11'>3</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='12'><input maxlength="1"></input></td>
+					<td id='13'><input maxlength="1"></input></td>
+					<td id='14'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='15'><input maxlength="1"></input></td>
+					<td id='16'><input maxlength="1"></input></td>
+					<td id='17'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>	
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td>7</td>
-					<td></td>
+					<td id='18'><input maxlength="1"></input></td>
+					<td id='19'>7</td>
+					<td id='20'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>3</td>
-					<td>1</td>
-					<td></td>
+					<td id='21'>3</td>
+					<td id='22'>1</td>
+					<td id='23'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>2</td>
-					<td></td>
-					<td></td>
+					<td id='24'>2</td>
+					<td id='25'><input maxlength="1"></input></td>
+					<td id='26'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>	
    </tr>
-   
    <tr><th>B</th></tr>
    <tr><th>C</th></tr>
    
@@ -126,57 +126,57 @@
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='27'><input maxlength="1"></input></td>
+					<td id='28'><input maxlength="1"></input></td>
+					<td id='29'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>6</td>
-					<td></td>
-					<td>9</td>
+					<td id='30'>6</td>
+					<td id='31'><input maxlength="1"></input></td>
+					<td id='32'>9</td>
 				</tr>
 				<tr>
-					<td>4</td>
-					<td>7</td>
-					<td>2</td>
+					<td id='33'>4</td>
+					<td id='34'>7</td>
+					<td id='35'>2</td>
 				</tr>
 			</table>
 		</td>
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td>2</td>
-					<td></td>
+					<td id='36'><input maxlength="1"></input></td>
+					<td id='37'>2</td>
+					<td id='38'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='39'><input maxlength="1"></input></td>
+					<td id='40'><input maxlength="1"></input></td>
+					<td id='41'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td>9</td>
-					<td></td>
+					<td id='42'><input maxlength="1"></input></td>
+					<td id='43'>9</td>
+					<td id='44'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
-					<td>9</td>
-					<td>3</td>
-					<td>7</td>
+					<td id='45'>9</td>
+					<td id='46'>3</td>
+					<td id='47'>7</td>
 				</tr>
 				<tr>
-					<td>4</td>
-					<td></td>
-					<td>8</td>
+					<td id='48'>4</td>
+					<td id='49'><input maxlength="1"></input></td>
+					<td id='50'>8</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='51'><input maxlength="1"></input></td>
+					<td id='52'><input maxlength="1"></input></td>
+					<td id='53'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>
@@ -190,57 +190,57 @@
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td></td>
-					<td>1</td>
+					<td id='54'><input maxlength="1"></input></td>
+					<td id='55'><input maxlength="1"></input></td>
+					<td id='56'>1</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td>4</td>
-					<td>5</td>
+					<td id='57'><input maxlength="1"></input></td>
+					<td id='58'>4</td>
+					<td id='59'>5</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td>6</td>
-					<td></td>
+					<td id='60'><input maxlength="1"></input></td>
+					<td id='61'>6</td>
+					<td id='62'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>
 		<td colspan="3" rowspan="3" class="goldBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='63'><input maxlength="1"></input></td>
+					<td id='64'><input maxlength="1"></input></td>
+					<td id='65'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='66'><input maxlength="1"></input></td>
+					<td id='67'><input maxlength="1"></input></td>
+					<td id='68'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>8</td>
-					<td></td>
-					<td>1</td>
+					<td id='69'>8</td>
+					<td id='70'><input maxlength="1"></input></td>
+					<td id='71'>1</td>
 				</tr>
 			</table>
 		</td>
 		<td colspan="3" rowspan="3" class="greenBox">
 			<table class="subTable">
 				<tr>
-					<td></td>
-					<td>5</td>
-					<td>2</td>
+					<td id='72'><input maxlength="1"></input></td>
+					<td id='73'>5</td>
+					<td id='74'>2</td>
 				</tr>
 				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
+					<td id='75'><input maxlength="1"></input></td>
+					<td id='76'><input maxlength="1"></input></td>
+					<td id='77'><input maxlength="1"></input></td>
 				</tr>
 				<tr>
-					<td>7</td>
-					<td></td>
-					<td></td>
+					<td id='78'>7</td>
+					<td id='79'><input maxlength="1"></input></td>
+					<td id='80'><input maxlength="1"></input></td>
 				</tr>
 			</table>
 		</td>	
@@ -250,6 +250,11 @@
    <tr><th>I</th></tr>
    </tbody>
    </table>
+   <div id="buttons">
+   		<input type="submit" value="Check" id="check"/>
+		<input type="reset" value="New Game" id="reset"/>
+   </div>
+   </form>
    </section>
    <article>
       <h1>To Play</h1>
@@ -295,5 +300,6 @@
       </nav>
    </footer>
       
+	  <script src="jpf_javascript.js"></script>
 </body>
 </html>
